Add the querySelctors

--- a/getByID.html
+++ b/getByID.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <Title>DOM demo</Title>
+        <title>DOM JavaScript</title>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {           
+            // let heading= document.getElementById ("container");
+            // heading.innerHTML="Title changed by JavaScript code";
+            // console.dir(heading);
+
+            // let content = document.getElementsByClassName("heading");
+            // console.dir(heading);
+            
+            let firstElement = document.querySelector(".heading");
+            console.dir(firstElement);
+
+            firstElement.style.color = "blue";});
+        </script>
     </head>
 
     <body>
-        <h1 id="container">Example of accessing element by ID</h1>
+        <div class="heading">
+            <h1 id="container">Example of accessing element by ID</h1>
+        </div>
 
-        <script>
-            let heading = document.getElementById("container");
-            heading.innerHTML = "Title changed by JavaScript code";
-        
-            console.dir(heading);
-        </script>
+        <div class="heading">
+            <h1 id="container1">second</h1>
+        </div>
+
     </body>
 </html>
